--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 repository = "https://github.com/retroctrl/fans/"
 description = "Simple structures common to controlling fans"
 keywords = ["embedded", "fan", "fans"]
+license = "MPL-2.0"
 
 [dependencies]
