--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,19 @@
+[workspace]
+members = ["virtual-fan"]
+
+[workspace.package]
+version = "0.2.0"
+edition = "2021"
+license = "MPL-2.0"
+
 [package]
 name = "fans"
-version = "0.1.2"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 repository = "https://github.com/retroctrl/fans/"
 description = "Simple structures common to controlling fans"
 keywords = ["embedded", "fan", "fans"]
-license = "MPL-2.0"
+license.workspace = true
 
 [features]
 default = []
