--- a/virtual-fan/Cargo.toml
+++ b/virtual-fan/Cargo.toml
@@ -8,11 +8,13 @@ keywords = ["embedded", "fan", "fans", "virtual-fan"]
 
 [features]
 default = ["log"]
+defmt = ["dep:defmt"]
 std = []
 alloc = []
 log = ["dep:log"]
 
 [dependencies]
-fans = { version = "0.1" }
+defmt = { version = "0.3.8", optional = true }
+fans = { version = "0.2" }
 log = { version = "0.4", optional = true }
 thiserror = { version = "2", default-features = false }
