--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ postcard = ["dep:postcard-schema", "dep:serde"]
 defmt = { version = "0.3", optional = true }
 postcard-schema = { version = "0.2", features = ["derive"], optional = true }
 serde = { version = "1.0.203", default-features = false, features = ["derive"], optional = true }
+thiserror = { version = "2.0.17", default-features = false }
